smarter list read